--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,8 @@
 body {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
